--- a/wwr/index.html
+++ b/wwr/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Whitewater Rafting Vacations | Dry Oar Boating | Home</title>
-    <link rel="stylesheet" href="styles/styles.css"> <!-- Added stylesheet link -->
+    <link rel="stylesheet" href="styles/site-plan-rafting.css"> <!-- Added stylesheet link -->
 </head>
 <body>
 <header>
@@ -22,7 +22,7 @@
 <div id="hero">
     <div id="hero-box">
         <!-- FIX: Use a relative path, not an absolute Windows path -->
-        <img id="hero-img" src="images/white-water-rafting.jpg" alt="People enjoying white water rafting">
+        <img id="hero-img" src="images/white water rafting.jfif" alt="People enjoying white water rafting">
     </div>
     <section id="hero-msg">
         <h1 class="home-title">Have An Adventure</h1>
