--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -9,116 +9,121 @@
 
 <body>
   <header>
-    <h1>TAM S25 Online Site Plan</h1>
-    <h2>TAM TAMBOWONEYI</h2>
+    <h1>[Site name] Site Plan</h1>
+    <h2>Thamsanqa Tambowoneyi</h2>
     <h2>WDD 130-A2</h2>
+    <!-- In the header above, add the name of your site, your name and class number. For example if you are in section 3 you would put WDD 130-03 -->
   </header>
-
   <main>
-    <section>
-      <hr />
-      <h2>Overview</h2>
-      <h3>Purpose</h3>
-      <p>The purpose of this website is to educate and inspire visitors by showcasing the diverse world of music,
-        including genres, instruments, artist spotlights, and music theory basics. The site aims to engage users through
-        multimedia content, curated playlists, and beginner-friendly resources that promote a deeper appreciation and
-        understanding of music.</p>
+    <!-- ------------------------Steps 2-5------------------------------ -->
+    <hr />
+    <h2>Overview</h2>
+    <h3>Purpose</h3>
+    <p>This website promotes our white water rafting adventures, provides trip booking, and showcases the thrill of outdoor river rafting</p>
+    <!-- change this -->
+
+    <h3>Audience</h3>
+    <p>Our audience includes adventure-seeking adults and families ages 18–50 who enjoy the outdoors. They access the site primarily via mobile or desktop to learn about trips and book online</p>
+    <!-- change this -->
+
+    <hr />
+    <h2>Branding</h2>
+    <h3>Website Logo</h3>
+    <!-- Replace this with some sort of logo for your site.  A logo can be as simple as the name of your site in a nice font :) -->
+    <img src="images/Rapids_logo.jpg" alt="Logo image" />
+    <hr />
+    <h2>Style Guide</h2>
+
+    <!-- ------------------------Steps 6-9------------------------------ -->
+
+    <h3>Color Palette</h3>
+    <!--  The colors you choose for a website are one of the most important decisions you will make. Follow the instructions on the activity in Canvas then return and replace the color codes below with the hex color codes (the 6 digit numbers that show at the bottom of each color) for the colors you have chosen below.  You should have at least 2 colors but do not have to fill in all 4 if you do not need them.  -->
+
+    <!-- Copy and paste the URL to your finished palette below. Replace the href value that is there with yours. Make sure to paste it into both the href value and the content text of the <a> tag -->
+    <p>Palette URL:</p>
+    <a href="https://coolors.co/396e94-e7c24f-a43312-381d2a-aabd8c"
+      target="_blank">https://coolors.co/396e94-e7c24f-a43312-381d2a-aabd8c</a>
+
+    <table class="colors">
+     <tr>
+        <td class="primary">#1B4965</td>
+        <td class="secondary">#CAE9FF</td>
+        <td class="accent1">#5FA8D3</td>
+        <td class="accent2">#FF6700</td>
+    </tr>
+
+      <!-- Replace the numbers in the boxes below with your hex color codes. Then switch to the site-plan.css file and change your colors there as well. -->
+      <tr>
+        <td class="primary">[#396E94]</td>
+        <td class="secondary">[#E7C24F]</td>
+        <td class="accent1">[#A43312]</td>
+        <td class="accent2"></td>
+      </tr>
+    </table>
+
+    <!-- ------------------------Steps 10-12------------------------------ -->
+
+    <h3>Typography</h3>
+    <!-- Choose a font for your paragraphs (body copy) and headlines. What font(s) have you chosen? Think also about which of your colors above you might use for background and font colors. -->
+
+    <h4>
+      Heading Font: Serif 
       <!-- change this -->
-
-      <h3>Audience</h3>
-      <p>The primary target audience for this site includes teenagers and young adults (ages 13–25) who have a growing
-        interest in music—whether as casual listeners, aspiring musicians, or students looking to expand their musical
-        knowledge. The site also serves educators or parents seeking introductory material for younger learners.</p>
+    </h4>
+    <h4>
+      Paragraph Font: Sans-serif
       <!-- change this -->
-    </section>
+    </h4>
+    <h3>Normal paragraph example</h3>
+    <p>
+      The best Whitewater Rafting in Colorado, White Water Rafting Company
+      offers rafting on the Colorado and Roaring Fork Rivers in Glenwood
+      Springs. Since 1974, we have been family owned and operated, rafting the
+      Shoshone section of Glenwood Canyon and beyond.
+    </p>
+    <h3>Colored paragraph example</h3>
+    <p class="colored">
+      Trips vary from mild and great for families, to trips exclusively for
+      physically fit and experienced rafters. No matter what type of river
+      adventures you are seeking, White Water Rafting Company can make it
+      happen for you.
+    </p>
 
-    <section>
-      <hr />
-      <h2>Branding</h2>
-      <h3>Website Logo</h3>
-      <img src="images/logo.png" alt="Website Logo" />
-    </section>
+    <!-- ------------------------Step 13------------------------------ -->
 
-    <section>
-      <hr />
-      <h2>Style Guide</h2>
-      <h3>Color Palette</h3>
-      <!--  The colors you choose for a website are one of the most important decisions you will make. Follow the
-          instructions on the activity in Canvas then return and replace the color codes below with the hex color codes
-          (the 6 digit numbers that show at the bottom of each color) for the colors you have chosen below.  You should
-          have at least 2 colors but do not have to fill in all 4 if you do not need them.  -->
-
-      <!-- Copy and paste the URL to your finished palette below. Replace the href value that is there with yours. Make
-          sure to paste it into both the href value and the content text of the <a> tag -->
-      <p>Palette URL:</p>
-      <a href="https://coolors.co/6f1d1b-bb9457-432818-99582a-ffe6a7" target="_blank">
-        https://coolors.co/6f1d1b-bb9457-432818-99582a-ffe6a7
-      </a>
-      <table class="colors">
-        <tr>
-          <th>Primary</th>
-          <th>Secondary</th>
-          <th>Accent 1</th>
-          <th>Accent 2</th>
-        </tr>
-        <tr>
-          <td class="primary">#396E94</td>
-          <td class="secondary">#E7C24F</td>
-          <td class="accent1">#A43312</td>
-          <td class="accent2">#FFE6A7</td>
-        </tr>
-      </table>
-    </section>
-
-    <section>
-      <h3>Typography</h3>
-      <!-- Choose a font for your paragraphs (body copy) and headlines. What font(s) have you chosen? Think also about
-          which of your colors above you might use for background and font colors. -->
-
-      <h4>Heading Font: "Rock Salt", cursive</h4>
-      <h4>Paragraph Font: "Roboto", sans-serif</h4>
-    </section>
-
-    <section>
-      <h3>Navigation</h3>
-      <!-- Think about how you want your navigation bar to look. In the site-plan.css file change the colors to your
-          colors to get the look you desire. -->
-      <nav>
-        <a href="index.html" aria-label="Home">Home</a>
-        <a href="about.html" aria-label="About Us">About Us</a>
-        <a href="contact.html" aria-label="Contact Us">Contact Us</a>
-      </nav>
-    </section>
-
-    <section>
-      <h2>Site Map</h2>
-      <div class="sitemap">
-        <div class="sm-home">Home</div>
-        <div class="sm-page2">About Us</div>
-        <div class="sm-page3">Contact Us</div>
-        <div class="top">&nbsp;</div>
-        <div class="left">&nbsp;</div>
-        <div class="right">&nbsp;</div>
+    <h3>Navigation</h3>
+    <!-- Think about how you want your navigation bar to look. In the site-plan.css file change the colors to your colors to get the look you desire. -->
+    <nav>
+      <a href="#">Home</a>
+      <a href="#">Page2</a>
+      <a href="#">Contact Us</a>
+    </nav>
+    <hr />
+    <h2>Site Map</h2>
+    <div class="sitemap">
+      <div class="sm-home">Home</div>
+      <div class="sm-page2">
+        [Page2]
+        <!-- this page will have a name later -->
       </div>
-    </section>
+      <div class="sm-page3">Contact Us</div>
 
-    <section>
-      <h2>Wireframes</h2>
-      <!-- Create an additional wireframe for your site. List it here below the Home page wireframe. -->
+      <div class="top">&nbsp;</div>
+      <div class="left">&nbsp;</div>
+      <div class="right">&nbsp;</div>
+    </div>
+    <hr />
+    <h2>Wireframes</h2>
+    <!-- Create an additional wireframe for your site. List it here below the Home page wireframe. -->
 
-      <h3>Home</h3>
-      <img src="https://byui-wdd.github.io/wdd130/rafting_images/wireframe_home.png" alt="Wireframe of the Home
-        page" />
+    <h3>Home</h3>
 
-      <h3>About Us</h3>
-      <img src="https://byui-wdd.github.io/wdd130/rafting_images/wireframe_about.png" alt="Wireframe of the About
-        Us page" />
-    </section>
+    <img src="https://byui-wdd.github.io/wdd130/rafting_images/wireframe_home.png" alt="home page wireframe" />
+
+    <h3>[Page 2]</h3>
+
+    <!-- <img src="#" alt="page 2 wireframe"> -->
   </main>
-
-  <footer>
-    <p>&copy; 2025 TAM TAMBOWONEYI. All rights reserved.</p>
-  </footer>
 </body>
 
 </html>
