--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -67,12 +67,10 @@
     <!-- Choose a font for your paragraphs (body copy) and headlines. What font(s) have you chosen? Think also about which of your colors above you might use for background and font colors. -->
 
     <h4>
-      Heading Font: Serif 
-      <!-- change this -->
+      Heading Font: 'IM Fell French Canon', serif
     </h4>
     <h4>
-      Paragraph Font: Sans-serif
-      <!-- change this -->
+      Paragraph Font: 'Lato', sans-serif
     </h4>
     <h3>Normal paragraph example</h3>
     <p>
@@ -94,16 +92,16 @@
     <h3>Navigation</h3>
     <!-- Think about how you want your navigation bar to look. In the site-plan.css file change the colors to your colors to get the look you desire. -->
     <nav>
-      <a href="#">Home</a>
-      <a href="#">Page2</a>
-      <a href="#">Contact Us</a>
+      <a href="index.html">Home</a>
+      <a href="#">Trips</a>
+      <a href="contactus.html">Contact Us</a>
     </nav>
     <hr />
     <h2>Site Map</h2>
     <div class="sitemap">
       <div class="sm-home">Home</div>
       <div class="sm-page2">
-        [Page2]
+        Trips
         <!-- this page will have a name later -->
       </div>
       <div class="sm-page3">Contact Us</div>
