--- a/wwr/index.html
+++ b/wwr/index.html
@@ -1,96 +1,89 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Whitewater Rafting Vacations | Dry Oar Boating | Home</title>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Whitewater Rafting Vacations | Dry Oar Boating | Home</title>
+  <link rel="stylesheet" href="styles/styles.css" />
 </head>
-<body>
-    <header>
-        <a id="logo_link" href="index.html">
-            <img id="logo" src="images/roundlogo.png" alt="Dry Oar Boating Logo">
-        </a>
-        <nav>
-            <a href="index.html">Home</a>
-            <a href="#">Page 2</a>
-            <a href="site-plan-rafting.html">Site Plan</a>
-            <a href="contactus.html">Contact Us</a>
-        </nav>
-    </header>
-    <div id="hero">
-        <div id="hero-box">
-            <img id="hero-img" src="images/white water rafting.jfif" alt="People enjoying white water rafting">
-        </div>
-        <section id="hero-msg">
-            <h1 class="home-title">Have An Adventure</h1>
-            <h4>Make Memories with Dry Oar </h4>
-            <div class='button-box'>
-                <a class='book' href="contactus.html">Book Now</a>
-            </div>
-        </section>
-    </div>
 
-</body>
-<header>
-    <a id="logo_link" href="index.html">
-        <img class="logo" src="images/roundlogo.png" alt="Dry Oar Logo">
-    </a>
-    <nav>
+<body>
+  <div id="content">
+    <header>
+      <a id="logo_link" href="index.html">
+        <img class="logo" src="images/logo.png" alt="Dry Oar Logo" />
+      </a>
+      <nav>
         <a href="index.html">Home</a>
         <a href="#">Page 2</a>
         <a href="site-plan-rafting.html">Site Plan</a>
         <a href="contactus.html">Contact Us</a>
-    </nav>
-</header>
-<div id="hero">
-    <div id="hero-box">
-        <img id="hero-img" src="images/scenes.jfif" alt="People enjoying white water rafting">
-    </div>
-    <section id="hero-msg">
-        <h1 class="home-title">Have An Adventure</h1>
-        <h4>Make Memories with Dry Oar </h4>
-        <div class='button-box'>
-            <a class='book' href="contactus.html">Book Now</a>
-        </div>
-    </section>
-</div>
-<main class="home-grid">
-    <section class="rivers-card">
-        <img class="card-img" src="images/river.jfif" alt="river in forest">
-        
-        <h2>Rivers</h2>
-    </section>
-    <section class="camping-card">
-        <img class="card-img" src="images/camping.jpg.jfif" alt="tent in mountains">
-        <img class="icon" src="images/camping_icon.png" alt="tent icon">
-        <h2>Camping</h2>
-    </section>
-    <section class="rapids-card">
-        <img class="card-img" src="images/Rapids_logo.jpg" alt="rafting boat">
-        <img class="icon" src="images/rapidicon.png" alt="oars icon">
-        <h2>Rapids</h2>
-    </section>
-        <h2>More Than Just The Thrill</h2>
-        <p>Enjoy the breathtaking scenery. From valleys, meadows, canyons, and high peaks; it's way more than just the rapids. It's a great way to get away from it all and relax amongst all the beauty of the great outdoors. </p>
-        <a class='join' href="rivers.html">Join Us</a>
-    </section>
+      </nav>
+    </header>
 
-</main>
-<footer>
-    <p>Dry Oar &copy; 20XX - Your First and Last Name Here</p>
-    <p><a href="site-plan-rafting.html">Site Plan</a></p>
-    <p><a href="contactus.html">Contact Us</a></p>
-    <div class="social">
-        <a href="https://facebook.com">
-            <img src="images/fb_icon.jfif" alt="fb icon">
-        </a>
-        <a href="https://twitter.com">
-            <img src="images/x_icon.png" alt="twitter icon">
-        </a>
-        <a href="https://instagram.com">
-            <img src="images/ig_icon.jfif" alt="instagram icon">
-        </a>
+    <div id="hero">
+      <div id="hero-box">
+        <img id="hero-img" src="images/white-water-rafting.jpg" alt="People enjoying white water rafting" />
+      </div>
+      <section id="hero-msg">
+        <h1 class="home-title">Have An Adventure</h1>
+        <h4>Make Memories with Dry Oar</h4>
+        <div class="button-box">
+          <a class="book" href="contactus.html">Book Now</a>
+        </div>
+      </section>
     </div>
-</footer>
+
+    <main class="home-grid">
+      <section class="rivers-card">
+        <img class="card-img" src="images/rivers.jpg" alt="river in forest" />
+        <img class="icon" src="images/river.jpg" alt="river icon" />
+        <h2>Rivers</h2>
+      </section>
+
+      <section class="camping-card">
+        <img class="card-img" src="images/camping.jpg" alt="tent in mountains" />
+        <h2>Camping</h2>
+      </section>
+
+      <section class="rapids-card">
+        <img class="card-img" src="images/white-water-rafting.jpg" alt="rafting boat" />
+        <img class="icon" src="images/oars.png" alt="oars icon" />
+        <h2>Rapids</h2>
+      </section>
+
+      <!-- New background container div -->
+      <div id="background"></div>
+
+      <img class="mountains" src="images/mountains.jpg" alt="Misty mountains" />
+
+      <section class="msg">
+        <h2>More Than Just The Thrill</h2>
+        <p>
+          Enjoy the breathtaking scenery. From valleys, meadows, canyons, and high peaks; it's way more than just the rapids.
+          It's a great way to get away from it all and relax amongst all the beauty of the great outdoors.
+        </p>
+        <a class="join" href="rivers.html">Join Us</a>
+      </section>
+    </main>
+
+    <footer>
+      <p>Dry Oar &copy; 2024 - Thamsanqa Tambowoneyi</p>
+      <p><a href="site-plan-rafting.html">Site Plan</a></p>
+      <p><a href="contactus.html">Contact Us</a></p>
+      <div class="social">
+        <a href="https://facebook.com" target="_blank" rel="noopener">
+          <img src="images/facebook.png" alt="Facebook icon" />
+        </a>
+        <a href="https://twitter.com" target="_blank" rel="noopener">
+          <img src="images/twitter.png" alt="Twitter icon" />
+        </a>
+        <a href="https://instagram.com" target="_blank" rel="noopener">
+          <img src="images/instagram.png" alt="Instagram icon" />
+        </a>
+      </div>
+    </footer>
+  </div>
+</body>
 </html>
