--- a/wwr/index.html
+++ b/wwr/index.html
@@ -12,7 +12,7 @@
   <div id="content">
     <header>
       <a id="logo_link" href="index.html">
-        <img class="logo" src="images/logo.png" alt="Dry Oar Logo" />
+        <img class="logo" src="images/Rapids_logo.jpg" alt="Dry Oar Logo" />
       </a>
       <nav>
         <a href="index.html">Home</a>
@@ -24,7 +24,7 @@
 
     <div id="hero">
       <div id="hero-box">
-        <img id="hero-img" src="images/white-water-rafting.jpg" alt="People enjoying white water rafting" />
+        <img id="hero-img" src="images/white water rafting.jfif" alt="People enjoying white water rafting" />
       </div>
       <section id="hero-msg">
         <h1 class="home-title">Have An Adventure</h1>
@@ -37,26 +37,27 @@
 
     <main class="home-grid">
       <section class="rivers-card">
-        <img class="card-img" src="images/rivers.jpg" alt="river in forest" />
-        <img class="icon" src="images/river.jpg" alt="river icon" />
+        <img class="card-img" src="images/river.jfif" alt="river in forest" />
+        <img class="icon" src="images/river_icon.png" alt="river icon" />
         <h2>Rivers</h2>
       </section>
 
       <section class="camping-card">
-        <img class="card-img" src="images/camping.jpg" alt="tent in mountains" />
+        <img class="card-img" src="images/camping.jpg.jfif" alt="tent in mountains" />
+        <img class="icon" src="images/camping_icon.png" alt="camping icon" />
         <h2>Camping</h2>
       </section>
 
       <section class="rapids-card">
-        <img class="card-img" src="images/white-water-rafting.jpg" alt="rafting boat" />
-        <img class="icon" src="images/oars.png" alt="oars icon" />
+        <img class="card-img" src="images/white water rafting.jfif" alt="rafting boat" />
+        <img class="icon" src="images/rapidicon.png" alt="oars icon" />
         <h2>Rapids</h2>
       </section>
 
       <!-- New background container div -->
       <div id="background"></div>
 
-      <img class="mountains" src="images/mountains.jpg" alt="Misty mountains" />
+      <img class="mountains" src="images/scenes.jfif" alt="Misty mountains" />
 
       <section class="msg">
         <h2>More Than Just The Thrill</h2>
@@ -74,13 +75,13 @@
       <p><a href="contactus.html">Contact Us</a></p>
       <div class="social">
         <a href="https://facebook.com" target="_blank" rel="noopener">
-          <img src="images/facebook.png" alt="Facebook icon" />
+          <img src="images/fb_icon.jfif" alt="Facebook icon" />
         </a>
         <a href="https://twitter.com" target="_blank" rel="noopener">
-          <img src="images/twitter.png" alt="Twitter icon" />
+          <img src="images/x_icon.png" alt="Twitter icon" />
         </a>
         <a href="https://instagram.com" target="_blank" rel="noopener">
-          <img src="images/instagram.png" alt="Instagram icon" />
+          <img src="images/ig_icon.jfif" alt="Instagram icon" />
         </a>
       </div>
     </footer>
