added a clearer link to the styles.css file

--- a/wwr/index.html
+++ b/wwr/index.html
@@ -5,6 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Whitewater Rafting Vacations | Dry Oar Boating | Home</title>
+  <!-- ✅ Correct and visible stylesheet link -->
   <link rel="stylesheet" href="styles/styles.css" />
 </head>
 
@@ -12,7 +13,7 @@
   <div id="content">
     <header>
       <a id="logo_link" href="index.html">
-        <img class="logo" src="images/Rapids_logo.jpg" alt="Dry Oar Logo" />
+        <img class="logo" src="images/logo.png" alt="Dry Oar Logo" />
       </a>
       <nav>
         <a href="index.html">Home</a>
@@ -24,7 +25,8 @@
 
     <div id="hero">
       <div id="hero-box">
-        <img id="hero-img" src="images/white water rafting.jfif" alt="People enjoying white water rafting" />
+        <!-- ✅ Use original high-quality image -->
+        <img id="hero-img" src="images/hero.png" alt="People enjoying white water rafting" />
       </div>
       <section id="hero-msg">
         <h1 class="home-title">Have An Adventure</h1>
@@ -37,27 +39,27 @@
 
     <main class="home-grid">
       <section class="rivers-card">
-        <img class="card-img" src="images/river.jfif" alt="river in forest" />
-        <img class="icon" src="images/river_icon.png" alt="river icon" />
+        <img class="card-img" src="images/rivers.jpg" alt="River in forest" />
+        <img class="icon" src="images/river_icon1.png" alt="River icon" />
         <h2>Rivers</h2>
       </section>
 
       <section class="camping-card">
-        <img class="card-img" src="images/camping.jpg.jfif" alt="tent in mountains" />
-        <img class="icon" src="images/camping_icon.png" alt="camping icon" />
+        <img class="card-img" src="images/camping.jpg" alt="Tent in mountains" />
+        <img class="icon" src="images/fire_icon.png" alt="Fire icon" />
         <h2>Camping</h2>
       </section>
 
       <section class="rapids-card">
-        <img class="card-img" src="images/white water rafting.jfif" alt="rafting boat" />
-        <img class="icon" src="images/rapidicon.png" alt="oars icon" />
+        <img class="card-img" src="images/rapids.jpg" alt="Rafting boat" />
+        <img class="icon" src="images/oars.png" alt="Oars icon" />
         <h2>Rapids</h2>
       </section>
 
-      <!-- New background container div -->
+      <!-- ✅ Background container for styling -->
       <div id="background"></div>
 
-      <img class="mountains" src="images/scenes.jfif" alt="Misty mountains" />
+      <img class="mountains" src="images/mountains.jpg" alt="Misty mountains" />
 
       <section class="msg">
         <h2>More Than Just The Thrill</h2>
@@ -75,13 +77,13 @@
       <p><a href="contactus.html">Contact Us</a></p>
       <div class="social">
         <a href="https://facebook.com" target="_blank" rel="noopener">
-          <img src="images/fb_icon.jfif" alt="Facebook icon" />
+          <img src="images/facebook.png" alt="Facebook icon" />
         </a>
         <a href="https://twitter.com" target="_blank" rel="noopener">
-          <img src="images/x_icon.png" alt="Twitter icon" />
+          <img src="images/twitter.png" alt="Twitter icon" />
         </a>
         <a href="https://instagram.com" target="_blank" rel="noopener">
-          <img src="images/ig_icon.jfif" alt="Instagram icon" />
+          <img src="images/instagram.png" alt="Instagram icon" />
         </a>
       </div>
     </footer>
