fonts and layout revised

--- a/wwr/index.html
+++ b/wwr/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Whitewater Rafting Vacations | Dry Oar Boating | Home</title>
-  <!-- ✅ Correct and visible stylesheet link -->
+  <!-- ✅ Import custom Google Font -->
   <link rel="stylesheet" href="styles/styles.css" />
 </head>
 
@@ -25,7 +25,6 @@
 
     <div id="hero">
       <div id="hero-box">
-        <!-- ✅ Use original high-quality image -->
         <img id="hero-img" src="images/hero.png" alt="People enjoying white water rafting" />
       </div>
       <section id="hero-msg">
@@ -39,24 +38,23 @@
 
     <main class="home-grid">
       <section class="rivers-card">
-        <img class="card-img" src="images/rivers.jpg" alt="River in forest" />
-        <img class="icon" src="images/river_icon1.png" alt="River icon" />
+        <img class="card-img" src="images/rivers.jpg" alt="river in forest" />
+        <img class="icon" src="images/river_icon1.png" alt="river icon" />
         <h2>Rivers</h2>
       </section>
 
       <section class="camping-card">
-        <img class="card-img" src="images/camping.jpg" alt="Tent in mountains" />
-        <img class="icon" src="images/fire_icon.png" alt="Fire icon" />
+        <img class="card-img" src="images/camping.jpg" alt="tent in mountains" />
+        <img class="icon" src="images/fire_icon.png" alt="fire icon" />
         <h2>Camping</h2>
       </section>
 
       <section class="rapids-card">
-        <img class="card-img" src="images/rapids.jpg" alt="Rafting boat" />
-        <img class="icon" src="images/oars.png" alt="Oars icon" />
+        <img class="card-img" src="images/rapids.jpg" alt="rafting boat" />
+        <img class="icon" src="images/oars.png" alt="oars icon" />
         <h2>Rapids</h2>
       </section>
 
-      <!-- ✅ Background container for styling -->
       <div id="background"></div>
 
       <img class="mountains" src="images/mountains.jpg" alt="Misty mountains" />
