added the link to css file

--- a/wwr/index.html
+++ b/wwr/index.html
@@ -5,7 +5,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Whitewater Rafting Vacations | Dry Oar Boating | Home</title>
-  <!-- ✅ Import custom Google Font -->
+
+  <!-- ✅ Link to CSS -->
   <link rel="stylesheet" href="styles/styles.css" />
 </head>
 
@@ -38,20 +39,20 @@
 
     <main class="home-grid">
       <section class="rivers-card">
-        <img class="card-img" src="images/rivers.jpg" alt="river in forest" />
-        <img class="icon" src="images/river_icon1.png" alt="river icon" />
+        <img class="card-img" src="images/rivers.jpg" alt="River in forest" />
+        <img class="icon" src="images/river_icon1.png" alt="River icon" />
         <h2>Rivers</h2>
       </section>
 
       <section class="camping-card">
-        <img class="card-img" src="images/camping.jpg" alt="tent in mountains" />
-        <img class="icon" src="images/fire_icon.png" alt="fire icon" />
+        <img class="card-img" src="images/camping.jpg" alt="Tent in mountains" />
+        <img class="icon" src="images/fire_icon.png" alt="Fire icon" />
         <h2>Camping</h2>
       </section>
 
       <section class="rapids-card">
-        <img class="card-img" src="images/rapids.jpg" alt="rafting boat" />
-        <img class="icon" src="images/oars.png" alt="oars icon" />
+        <img class="card-img" src="images/rapids.jpg" alt="Rafting boat" />
+        <img class="icon" src="images/oars.png" alt="Oars icon" />
         <h2>Rapids</h2>
       </section>
 
