--- a/wwr/mysite/site-plan.html
+++ b/wwr/mysite/site-plan.html
@@ -25,7 +25,7 @@
     <hr>
     <h2>Branding</h2>
     <h3>Website Logo</h3>
-    <img src="images/logo.png" alt="Music Vibes Logo">
+    <img src="images/75fe9f7c15bd4133aff94d66bab55986-free.png" alt="Music Vibes Logo">
     <hr>
 
     <h2>Style Guide</h2>
