got it prepped up for submsission

--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -14,6 +14,7 @@
     <h2>Thamsanqa Tambowoneyi</h2>
     <h2>WDD 130-A2</h2>
   </header>
+
   <main>
     <section>
       <hr />
@@ -54,51 +55,4 @@
       </table>
       <h3>Typography</h3>
       <h4>Heading Font: <span class="heading-font">IM Fell French Canon, serif</span></h4>
-      <h4>Paragraph Font: <span class="paragraph-font">Lato, sans-serif</span></h4>
-      <h3>Normal paragraph example</h3>
-      <p>
-        The best Whitewater Rafting in Colorado, White Water Rafting Company offers rafting on the Colorado and Roaring Fork Rivers in Glenwood Springs. Since 1974, we have been family owned and operated, rafting the Shoshone section of Glenwood Canyon and beyond.
-      </p>
-      <h3>Colored paragraph example</h3>
-      <p class="colored">
-        Trips vary from mild and great for families, to trips exclusively for physically fit and experienced rafters. No matter what type of river adventures you are seeking, White Water Rafting Company can make it happen for you.
-      </p>
-    </section>
-
-    <section>
-      <h3>Navigation</h3>
-      <nav>
-        <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="#">Trips</a></li>
-          <li><a href="contactus.html">Contact Us</a></li>
-        </ul>
-      </nav>
-    </section>
-
-    <section>
-      <hr />
-      <h2>Site Map</h2>
-      <div class="sitemap">
-        <div class="sm-home">Home</div>
-        <div class="sm-page2">Trips</div>
-        <div class="sm-page3">Contact Us</div>
-      </div>
-    </section>
-
-    <section>
-      <hr />
-      <h2>Wireframes</h2>
-      <h3>Home</h3>
-      <img src="https://byui-wdd.github.io/wdd130/rafting_images/wireframe_home.png" alt="Home page wireframe" class="wireframe" />
-      <h3>Trips Page</h3>
-      <img src="https://byui-wdd.github.io/wdd130/rafting_images/wireframe_trips.png" alt="Trips page wireframe" class="wireframe" />
-    </section>
-  </main>
-  <footer>
-    <hr />
-    <p>&copy; 2025 DRY OAR. All rights reserved.</p>
-  </footer>
-</body>
-
-</html>
+      <h4>Paragraph Font: <span cla
