--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -6,15 +6,15 @@
   <title>DRY OAR Site Plan</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="stylesheet" href="styles/site-plan-rafting.css" />
-  <!-- Google Fonts for improved typography -->
   <link href="https://fonts.googleapis.com/css?family=IM+Fell+French+Canon:400,700|Lato:400,700&display=swap" rel="stylesheet">
 </head>
 
 <body>
   <header>
     <h1>DRY OAR Site Plan</h1>
-    <p class="author">Thamsanqa Tambowoneyi &mdash; WDD 130-A2</p>
+    <p class="author">Thamsanqa Tambowoneyi — WDD 130-A2</p>
   </header>
+
   <main>
     <section aria-labelledby="overview">
       <h2 id="overview">Overview</h2>
@@ -51,16 +51,18 @@
           <td class="accent2">#AABD8C<br>Accent 2</td>
         </tr>
       </table>
+
       <h3>Typography</h3>
       <ul>
-        <li>Heading Font: <span style="font-family:'IM Fell French Canon', serif;">IM Fell French Canon, serif</span>
-        </li>
-        <li>Paragraph Font: <span style="font-family:'Lato', sans-serif;">Lato, sans-serif</span></li>
+        <li>Heading Font: <span style="font-family:'IM Fell French Canon', serif;">IM Fell French Canon</span></li>
+        <li>Paragraph Font: <span style="font-family:'Lato', sans-serif;">Lato</span></li>
       </ul>
+
       <h3>Normal paragraph example</h3>
       <p>
         The best Whitewater Rafting in Colorado, White Water Rafting Company offers rafting on the Colorado and Roaring Fork Rivers in Glenwood Springs. Since 1974, we have been family owned and operated, rafting the Shoshone section of Glenwood Canyon and beyond.
       </p>
+
       <h3>Colored paragraph example</h3>
       <p class="colored">
         Trips vary from mild and great for families, to trips exclusively for physically fit and experienced rafters. No matter what type of river adventures you are seeking, White Water Rafting Company can make it happen for you.
@@ -92,15 +94,16 @@
       <div class="wireframes">
         <div>
           <h3>Home</h3>
-          <img src="https://byui-wdd.github.io/wdd130/rafting_images/wireframe_home.png" alt="Wireframe of the Home page layout" class="wireframe" />
+          <img src="images/wireframe.png" alt="Wireframe of the Home page layout" class="wireframe" />
         </div>
         <div>
           <h3>Trips Page</h3>
-          <img src="https://byui-wdd.github.io/wdd130/rafting_images/wireframe_trips.png" alt="Wireframe of the Trips page layout" class="wireframe" />
+          <img src="images/wireframe_trips.png" alt="Wireframe of the Trips page layout" class="wireframe" />
         </div>
       </div>
     </section>
   </main>
+
   <footer>
     <p>&copy; 2025 DRY OAR. All rights reserved.</p>
   </footer>
