--- a/wwr/mysite/playlists.html
+++ b/wwr/mysite/playlists.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <title>Playlists - Music Vibes</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="stylesheet" href="styles/style.css" />
+  <link rel="stylesheet" href="styles/playlist.css" />
 </head>
 <body>
   <header>
