improved what professor wanted

--- a/wwr/mysite/playlists.html
+++ b/wwr/mysite/playlists.html
@@ -19,17 +19,40 @@
   </header>
 
   <main>
-    <section>
-      <h2>Playlists</h2>
-      <p>
-        Discover hand-picked playlists for every occasion, mood, and moment in your day. From 'Study Flow' for quiet concentration to 'Jiu-Jitsu Drive' for intense motivation, these playlists are crafted to elevate your experience. Each entry includes a summary, a suggested listening environment, and embedded links to Spotify or YouTube where possible. Let the music guide your rhythm, whether you're relaxing, commuting, or training.
-      </p>
-      <div class="playlist-images">
-        <img src="images/playlist.png" alt="Playlist cover art example" />
-        <img src="images/playlist2.png" alt="Mood-based music visuals" />
-      </div>
-    </section>
-  </main>
+  <section class="playlist-block">
+    <h2>Study Flow</h2>
+    <p>
+      Focused instrumentals and lo-fi beats to keep your concentration sharp. Ideal for deep study sessions, reading, or calm work environments.
+    </p>
+    <div class="playlist-images">
+      <img src="images/playlist.png" alt="Study Flow playlist cover" />
+    </div>
+    <a href="https://open.spotify.com" target="_blank" class="cta-button">Listen on Spotify</a>
+  </section>
+
+  <section class="playlist-block">
+    <h2>Jiu-Jitsu Drive</h2>
+    <p>
+      Energetic and motivational tracks to fuel your training. This playlist is designed for physical activity, especially martial arts or gym workouts.
+    </p>
+    <div class="playlist-images">
+      <img src="images/playlist2.png" alt="Jiu-Jitsu Drive playlist cover" />
+    </div>
+    <a href="https://youtube.com" target="_blank" class="cta-button">Watch on YouTube</a>
+  </section>
+
+  <section class="playlist-block">
+    <h2>Chill Sunday</h2>
+    <p>
+      A blend of mellow acoustic, indie, and jazzy tones perfect for unwinding on a lazy Sunday morning or winding down after a busy day.
+    </p>
+    <div class="playlist-images">
+      <img src="images/playlist.jfif" alt="Chill Sunday playlist cover" />
+    </div>
+    <a href="https://open.spotify.com" target="_blank" class="cta-button">Play Now</a>
+  </section>
+</main>
+
 
   <footer>
     <p>&copy; 2025 Music Vibes. All rights reserved.</p>
