--- a/wwr/mysite/index.html
+++ b/wwr/mysite/index.html
@@ -12,9 +12,10 @@
     <h1>Music Vibes</h1>
     <nav aria-label="Main site navigation">
       <ul>
-        <li><a href="index.html" class="active">Home</a></li>
+        <li><a href="index.html" class="active" aria-current="page">Home</a></li>
         <li><a href="genre.html">Genres</a></li>
         <li><a href="playlists.html">Playlists</a></li>
+        <li><a href="site-plan.html">Site Plan</a></li>
       </ul>
     </nav>
   </header>
@@ -35,7 +36,12 @@
 
   <footer>
     <p>&copy; 2025 Music Vibes. All rights reserved.</p>
-    <a href="site-plan.html">View Site Plan</a>
+    <nav aria-label="Footer navigation">
+      <a href="index.html">Home</a> |
+      <a href="genre.html">Genres</a> |
+      <a href="playlists.html">Playlists</a> |
+      <a href="site-plan.html">Site Plan</a>
+    </nav>
   </footer>
 </body>
-</html>
+</html> 
