--- a/wwr/mysite/playlists.html
+++ b/wwr/mysite/playlists.html
@@ -4,55 +4,55 @@
   <meta charset="utf-8" />
   <title>Playlists - Music Vibes</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="stylesheet" href="styles/playlist.css" />
+  <!-- Use the main styles file for consistency across pages -->
+  <link rel="stylesheet" href="styles/styles.css" />
 </head>
 <body>
   <header>
     <h1>Music Vibes</h1>
-    <nav>
+    <nav aria-label="Main site navigation">
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="genres.html">Genres</a></li>
-        <li><a href="playlists.html">Playlists</a></li>
+        <li><a href="playlists.html" class="active" aria-current="page">Playlists</a></li>
       </ul>
     </nav>
   </header>
 
   <main>
-  <section class="playlist-block">
-    <h2>Study Flow</h2>
-    <p>
-      Focused instrumentals and lo-fi beats to keep your concentration sharp. Ideal for deep study sessions, reading, or calm work environments.
-    </p>
-    <div class="playlist-images">
-      <img src="images/playlist.png" alt="Study Flow playlist cover" />
-    </div>
-    <a href="https://open.spotify.com" target="_blank" class="cta-button">Listen on Spotify</a>
-  </section>
+    <section class="playlist-block">
+      <h2>Study Flow</h2>
+      <p>
+        Focused instrumentals and lo-fi beats to keep your concentration sharp. Ideal for deep study sessions, reading, or calm work environments.
+      </p>
+      <div class="playlist-images">
+        <img src="images/playlist.png" alt="Study Flow playlist cover" />
+      </div>
+      <a href="https://open.spotify.com" target="_blank" rel="noopener" class="cta-button">Listen on Spotify</a>
+    </section>
 
-  <section class="playlist-block">
-    <h2>Jiu-Jitsu Drive</h2>
-    <p>
-      Energetic and motivational tracks to fuel your training. This playlist is designed for physical activity, especially martial arts or gym workouts.
-    </p>
-    <div class="playlist-images">
-      <img src="images/playlist2.png" alt="Jiu-Jitsu Drive playlist cover" />
-    </div>
-    <a href="https://youtube.com" target="_blank" class="cta-button">Watch on YouTube</a>
-  </section>
+    <section class="playlist-block">
+      <h2>Jiu-Jitsu Drive</h2>
+      <p>
+        Energetic and motivational tracks to fuel your training. This playlist is designed for physical activity, especially martial arts or gym workouts.
+      </p>
+      <div class="playlist-images">
+        <img src="images/playlist2.png" alt="Jiu-Jitsu Drive playlist cover" />
+      </div>
+      <a href="https://youtube.com" target="_blank" rel="noopener" class="cta-button">Watch on YouTube</a>
+    </section>
 
-  <section class="playlist-block">
-    <h2>Chill Sunday</h2>
-    <p>
-      A blend of mellow acoustic, indie, and jazzy tones perfect for unwinding on a lazy Sunday morning or winding down after a busy day.
-    </p>
-    <div class="playlist-images">
-      <img src="images/playlist.jfif" alt="Chill Sunday playlist cover" />
-    </div>
-    <a href="https://open.spotify.com" target="_blank" class="cta-button">Play Now</a>
-  </section>
-</main>
-
+    <section class="playlist-block">
+      <h2>Chill Sunday</h2>
+      <p>
+        A blend of mellow acoustic, indie, and jazzy tones perfect for unwinding on a lazy Sunday morning or winding down after a busy day.
+      </p>
+      <div class="playlist-images">
+        <img src="images/playlist.jfif" alt="Chill Sunday playlist cover" />
+      </div>
+      <a href="https://open.spotify.com" target="_blank" rel="noopener" class="cta-button">Play Now</a>
+    </section>
+  </main>
 
   <footer>
     <p>&copy; 2025 Music Vibes. All rights reserved.</p>
